test/e2e/conformance/tests/httproute-consul-demo.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.higress.io/v1
kind: McpBridge
metadata:
  name: default
  namespace: higress-system
spec:
  registries:
    - consulDatacenter: dc1
      consulServiceTag: higress
      domain: consul-service.higress-conformance-app-backend.svc.cluster.local
      name: consuldemo
      port: 8500
      type: consul
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: consuldemo.dc1.consul
  name: httproute-consul-demo-ingress
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
    - host: "foo.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
